# kalshi-trading

./: .gitignore  README.md  collect-historical.py  input.txt  main.py  past_inputs.txt  plot_ohlc_html.py  pyproject.toml  tickers.txt
KalshiClients/: KalshiClients.py
analysis/: analysis.py  notes_analysis.txt
model/: BaseStrategy.py  FavoritesOnlyStrategy.py  SmaCrossoverStrategy.py  strategy.py
traders/: BaseTrader.py  LiveTrader.py  SimulatedTrader.py  Trader.py
utils/: utils.py
