[project]
name = "kalshi-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=45.0.7",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "requests>=2.32.4",
    "websockets==14.1",
]
